# handyXmutter

./: CLAUDE.md  README.md  package.json  tailwind.config.js
.cargo/: config.toml
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_save.rs  cli.rs  cloud_transcribe.rs  diarize.rs  lib.rs  llm_client.rs  main.rs  settings.rs  tray.rs  ytdlp.rs
src-tauri/src/audio_toolkit/audio/: recorder.rs  utils.rs
src-tauri/src/commands/: journal.rs  meeting.rs  mod.rs  models.rs  share.rs  video.rs
src-tauri/src/managers/: audio.rs  history.rs  journal.rs  mod.rs
src/components/: AccessibilityPermissions.tsx  Sidebar.tsx
src/components/footer/: Footer.tsx
src/components/mutter/: JotterEditor.tsx  MutterPanel.tsx  MutterSettings.tsx
src/components/onboarding/: AccessibilityOnboarding.tsx  Onboarding.tsx
src/components/settings/journal/: DetailView.tsx  JournalSettings.tsx  journalUtils.ts
src/components/ui/: AudioPlayer.tsx
src/hooks/: useAudioRecorder.ts
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/vi/: translation.json
src/lib/: journal.ts  platform.ts
src/stores/: mutterStore.ts  settingsStore.ts
src/utils/: dateFormat.ts
