[package]
name = "handyxmutter"
version = "0.7.8"
description = "handyXmutter — a voice journal built on Handy"
authors = ["yeoyongkiat"]
edition = "2021"
license = "MIT"
default-run = "handyxmutter"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handyxmutter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.9.1", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.95"
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = { version = "1.43.0", features = ["process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
ferrous-opencc = "0.2.3"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "a90dbe11" }
cpal = "0.16.0"
rubato = "0.16.2"
rustfft = "6.4.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", rev = "88b3a01f", default-features = false }
enigo = "0.6.1"
rodio = { git = "https://github.com/cjpais/rodio.git", rev = "fed30292" }
symphonia = { version = "0.5", features = ["isomp4", "mkv", "aac", "mp3", "vorbis", "pcm"] }
transcribe-rs = { version = "0.2.5", features = ["whisper", "parakeet", "moonshine", "sense_voice"] }
pyannote-rs = "0.3.4"
handy-keys = "0.2.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "da9c9a8d" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"

[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", rev = "8ba98c7b" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", rev = "8ba98c7b" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", rev = "8ba98c7b" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
